<resources>
  <string name="app_name">Zoo</string>
  <string name="title_activity_zoo_manager">Zoo manager</string>
  <string name="title_activity_create_pen">Create pen</string>
  <string name="title_activity_animal_detail">Animal details</string>
  <string name="title_activity_create_zookeeper">Create zookeeper</string>
  <string name="title_activity_pen_detail">Pen details</string>
  <string name="title_activity_zookeeper_detail">Zookeeper details</string>
  <string name="title_activity_auto_allocator">Auto allocate</string>
  <string name="allocate_animals">Auto allocate animals</string>
  <string name="allocate_pens">Auto allocate pens</string>
  <string name="weather_title">Weather in %s</string>
  <string name="temperature">Temp: %.1f℃</string>
  <string name="wind_speed">Wind speed: %.1f m/s</string>
  <string name="action_save">Save</string>
  <string name="action_cancel">Cancel</string>
  <string name="create_animal">Create animal</string>
  <string name="species_hint">Species</string>
  <string name="dangerous_question">Dangerous animal?</string>
  <string name="total_animals">Total animals: %d</string>
  <string name="total_pens">Total pens: %d</string>
  <string name="total_zookeepers">Total zookeepers: %d</string>
  <string name="animal_land_area_hint">Land area required</string>
  <string name="animal_water_volume_hint">Water volume required</string>
  <string name="pen_types">Pen types</string>
  <string name="aquarium">Aquarium</string>
  <string name="aviary">Aviary</string>
  <string name="dry_pen">Dry pen</string>
  <string name="part_wet_part_dry">Part wet part dry pen</string>
  <string name="petting">Petting pen</string>
  <string name="animal_air_volume_hint">Air volume required</string>
  <string name="water_types">Water type for this animal</string>
  <string name="salt_water">Salt water</string>
  <string name="fresh_water">Fresh water</string>
  <string name="create_pen">Create pen</string>
  <string name="create_pen_name">Pen name</string>
  <string name="pen_temperature_hint">Pen temperature</string>
  <string name="pen_length_hint">Pen length (m)</string>
  <string name="pen_width_hint">Pen width (m)</string>
  <string name="pen_water_depth_hint">Pen water depth (m)</string>
  <string name="pen_air_height_hint">Pen height (m)</string>
  <string name="animal_pen_types_detail">Pen types:</string>
  <string name="animal_dangerous_detail">Dangerous:</string>
  <string name="animal_land_area_detail">Land area required:</string>
  <string name="animal_water_volume_detail">Water volume required:</string>
  <string name="animal_air_volume_detail">Air volume required:</string>
  <string name="animal_water_types_detail">Water types:</string>
  <string name="animal_assigned_detail">Assigned to pen:</string>
  <string name="assign_to_pen">Assign to pen</string>
  <string name="pen_detail_type_title">Pen type:</string>
  <string name="pen_detail_temperature">Pen temperature:</string>
  <string name="pen_land_area_detail">Pen land area:</string>
  <string name="pen_water_volume_detail">Pen water volume:</string>
  <string name="pen_air_volume_detail">Pen air volume:</string>
  <string name="pen_water_type_detail">Pen water type:</string>
  <string name="pen_assigned_detail">Assigned to zookeeper:</string>
  <string name="assign_to_zookeeper">Assign to zookeeper</string>
  <string name="create_zookeeper">Create zookeeper</string>
  <string name="zookeeper_name_hint">Zookeeper name</string>
  <string name="zookeeper_pen_types">Pen types this zookeeper can manage:</string>
  <string name="unassigned">Unassigned</string>
  <string-array name="animal_types">
    <item>Land animal</item>
    <item>Swimming animal</item>
    <item>Flying animal</item>
  </string-array>
  <string-array name="pen_types">
    <item>Aquarium</item>
    <item>Aviary</item>
    <item>Dry pen</item>
    <item>Petting pen</item>
    <item>Part water part dry pen</item>
  </string-array>
</resources>
