<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhalloran.zoo.ui.create.CreatePenActivity">
  <TextView
      android:id="@+id/create_pen_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/create_pen"
      android:textSize="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  <EditText
      android:id="@+id/create_pen_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:hint="@string/create_pen_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_title"/>
  <Spinner
      android:id="@+id/create_pen_type_spinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_name"/>
  <EditText
      android:id="@+id/create_pen_temperature"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/pen_temperature_hint"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_type_spinner"/>
  <EditText
      android:id="@+id/create_pen_length"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/pen_length_hint"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_temperature"/>
  <EditText
      android:id="@+id/create_pen_width"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/pen_width_hint"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_length"/>
  <EditText
      android:id="@+id/create_pen_water_depth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/pen_water_depth_hint"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_width"/>
  <EditText
      android:id="@+id/create_pen_air_height"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/pen_air_height_hint"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_water_depth"/>
  <TextView
      android:id="@+id/create_pen_water_type_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/water_types"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_air_height"/>
  <RadioGroup
      android:id="@+id/create_pen_water_type_view_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_water_type_title"
      >
    <RadioButton
        android:id="@+id/salt_water_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salt_water"/>
    <RadioButton
        android:id="@+id/fresh_water_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fresh_water" />
  </RadioGroup>
  <Button
      android:id="@+id/create_pen_save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/action_save"
      app:layout_constraintEnd_toStartOf="@+id/create_pen_cancel_button"
      app:layout_constraintTop_toBottomOf="@id/create_pen_water_type_view_group"/>
  <Button
      android:id="@+id/create_pen_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/action_cancel"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_pen_water_type_view_group"/>
</android.support.constraint.ConstraintLayout>
