<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhalloran.zoo.CreateAnimalActivity">
  <TextView
      android:id="@+id/create_animal_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/create_animal"
      android:textSize="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  <Spinner
      android:id="@+id/create_animal_type_spinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_title"/>
  <EditText
      android:id="@+id/create_animal_input_species"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:hint="@string/species_hint"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_type_spinner"/>
  <TextView
      android:id="@+id/create_animal_pen_type_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/pen_types"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_input_species"/>
  <LinearLayout
      android:id="@+id/create_animal_pen_type_view_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_pen_type_title"
      >
    <CheckBox
        android:id="@+id/aquarium_pen_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aquarium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_animal_pen_type_view_group"/>
    <CheckBox
        android:id="@+id/aviary_pen_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aviary"
        app:layout_constraintStart_toStartOf="@id/aquarium_pen_type_checkbox"
        app:layout_constraintTop_toTopOf="@id/create_animal_pen_type_view_group"/>
    <CheckBox
        android:id="@+id/dry_pen_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dry_pen"
        app:layout_constraintStart_toStartOf="@id/aviary_pen_type_checkbox"
        app:layout_constraintTop_toTopOf="@id/create_animal_pen_type_view_group"/>
  </LinearLayout>
  <EditText
      android:id="@+id/create_animal_land_area_required"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/animal_land_area_hint"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_pen_type_view_group"/>
  <EditText
      android:id="@+id/create_animal_water_volume_required"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/animal_water_volume_hint"
      android:visibility="gone"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_land_area_required"/>
  <EditText
      android:id="@+id/create_animal_air_volume_required"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/animal_air_volume_hint"
      android:visibility="gone"
      android:inputType="phone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_water_volume_required"/>
  <TextView
      android:id="@+id/create_animal_water_type_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/water_types"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_air_volume_required"/>
  <LinearLayout
      android:id="@+id/create_animal_water_type_view_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_water_type_title"
      >
    <CheckBox
        android:id="@+id/salt_water_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salt_water"/>
    <CheckBox
        android:id="@+id/fresh_water_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fresh_water" />
  </LinearLayout>
  <Button
      android:id="@+id/create_animal_save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/action_save"
      app:layout_constraintEnd_toStartOf="@+id/create_animal_cancel_button"
      app:layout_constraintTop_toBottomOf="@id/create_animal_water_type_view_group"/>
  <Button
      android:id="@+id/create_animal_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/action_cancel"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_animal_water_type_view_group"/>
</android.support.constraint.ConstraintLayout>
