<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhalloran.zoo.ui.create.CreateZookeeperActivity">
  <TextView
      android:id="@+id/create_zookeeper_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/create_zookeeper"
      android:textSize="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  <EditText
      android:id="@+id/create_zookeeper_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/zookeeper_name_hint"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_zookeeper_title"/>
  <TextView
      android:id="@+id/create_zookeeper_pen_type_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/zookeeper_pen_types"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_zookeeper_name"/>
  <LinearLayout
      android:id="@+id/create_zookeeper_pen_type_view_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_zookeeper_pen_type_title"
      >
    <CheckBox
        android:id="@+id/aquarium_pen_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aquarium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_zookeeper_pen_type_view_group"/>
    <CheckBox
        android:id="@+id/aviary_pen_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aviary"
        app:layout_constraintStart_toStartOf="@id/aquarium_pen_type_checkbox"
        app:layout_constraintTop_toTopOf="@id/create_animal_pen_type_view_group"/>
    <CheckBox
        android:id="@+id/dry_pen_type_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dry_pen"
        app:layout_constraintStart_toStartOf="@id/aviary_pen_type_checkbox"
        app:layout_constraintTop_toTopOf="@id/create_animal_pen_type_view_group"/>
  </LinearLayout>

  <Button
      android:id="@+id/create_zookeeper_save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:text="@string/action_save"
      app:layout_constraintEnd_toStartOf="@+id/create_zookeeper_cancel_button"
      app:layout_constraintTop_toBottomOf="@id/create_zookeeper_pen_type_view_group"/>
  <Button
      android:id="@+id/create_zookeeper_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/action_cancel"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_zookeeper_pen_type_view_group"/>

</android.support.constraint.ConstraintLayout>
