<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhalloran.zoo.PenDetailActivity">
  <android.support.design.widget.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

  </android.support.design.widget.AppBarLayout>
  <TextView
      android:id="@+id/pen_detail_type"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:textSize="24dp"
      android:text=""
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
  <LinearLayout
      android:id="@+id/pen_detail_temperature"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pen_detail_type"
      >
    <TextView
        android:id="@+id/pen_detail_temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/pen_detail_temperature"/>
    <TextView
        android:id="@+id/pen_detail_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/pen_detail_land_area"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pen_detail_temperature"
      >
    <TextView
        android:id="@+id/pen_detail_land_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/pen_land_area_detail"/>
    <TextView
        android:id="@+id/pen_detail_land_area_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/pen_detail_water_volume"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pen_detail_land_area"
      >
    <TextView
        android:id="@+id/pen_detail_water_volume_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/pen_water_volume_detail"/>
    <TextView
        android:id="@+id/pen_detail_water_volume_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/pen_detail_air_volume"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pen_detail_water_volume"
      >
    <TextView
        android:id="@+id/pen_detail_air_volume_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/pen_air_volume_detail"/>
    <TextView
        android:id="@+id/pen_detail_air_volume_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/pen_detail_water_type"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pen_detail_air_volume"
      >
    <TextView
        android:id="@+id/pen_detail_water_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/pen_water_type_detail"/>
    <TextView
        android:id="@+id/pen_detail_water_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>


</android.support.constraint.ConstraintLayout>
