<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhalloran.zoo.AnimalDetailActivity">
  <android.support.design.widget.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

  </android.support.design.widget.AppBarLayout>
  <TextView
      android:id="@+id/animal_detail_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:textSize="24dp"
      android:text=""
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
  <LinearLayout
      android:id="@+id/animal_detail_pen_types"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/animal_detail_name"
      >
    <TextView
        android:id="@+id/animal_detail_pen_types_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/animal_pen_types_detail"/>
    <TextView
        android:id="@+id/animal_detail_pen_types_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/animal_detail_land_area"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/animal_detail_pen_types"
      >
    <TextView
        android:id="@+id/animal_detail_land_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/animal_land_area_detail"/>
    <TextView
        android:id="@+id/animal_detail_land_area_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/animal_detail_water_volume"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/animal_detail_land_area"
      >
    <TextView
        android:id="@+id/animal_detail_water_volume_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/animal_water_volume_detail"/>
    <TextView
        android:id="@+id/animal_detail_water_volume_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/animal_detail_air_volume"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/animal_detail_water_volume"
      >
    <TextView
        android:id="@+id/animal_detail_air_volume_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/animal_air_volume_detail"/>
    <TextView
        android:id="@+id/animal_detail_air_volume_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/animal_detail_water_types"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/animal_detail_air_volume"
      >
    <TextView
        android:id="@+id/animal_detail_water_types_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/animal_water_types_detail"/>
    <TextView
        android:id="@+id/animal_detail_water_types_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
  </LinearLayout>


</android.support.constraint.ConstraintLayout>
